Add remaining checkpoints

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <li><a rel="self" href="/Сагарчин">Сагарчин</a></li>
       <li><a rel="self" href="/Воскресенское">Воскресенское</a></li>
       <li><a rel="self" href="/Петухово">Петухово</a></li>
-      <li><a rel="self" href="/Черлакский">Черлакский</a></li>
-      <li><a rel="self" href="/Карасукский">Карасукский</a></li>
+      <li><a rel="self" href="/Черлакский">Черлакский(Ольховка)</a></li>
+      <li><a rel="self" href="/Карасукский">Карасукский(Павловка)</a></li>
       <li><a rel="self" href="/Кулунда">Кулунда</a></li>
       <li><a rel="self" href="/Веселоярск">Веселоярск</a></li>
       <li><a rel="self" href="/Михайловка">Михайловка</a></li>
